@startuml
skinparam classAttributeIconSize 0

Class "AddCustomerUI"{
}

Class "AddCustomerController"{
+registerCustomer(name, vat, email, phone Number, birthday, gender, address)

+repositories()
+customers()
+saveCustomer()
}

Class "Name"{
-String firstName
-String lastName

+Name(String firstName, String lastName)
+valueOf()
+firstName()
+lastName()
+equals(Object o)
+hashCode()
+toString()
}

Class "Vat"{
-long vatId

+Name(Long vatId)
+valueOf()
+vatId()
+equals(Object o)
+hashCode()
+toString()
}


Class "Customer"{
     -Name name;
     -Vat vat;
     -Date dateOfBirth;
     -PhoneNumber phoneNumber;
     -Address address;

+Customer(name, vat, email, phoneNumber)

+name()
+vat()
+email()
+phoneNumber()

+dateOfBirth(LocalDate dateOfBirth)
+gender(Gender gender)
+address(Address address)

}

class Address {
-Name streetName
-PostalCode postalCode
-Integer doorNumber
-City city
-Country country
-AddressType addressType

+Address(streetName, postalCode, doorNumber, city, country)
+valueOf()
+streetName()
+postalCode()
+doorNumber()
+city()
+country()
+addressType()
+equals(Object o)
+hashCode()
+toString()

}

enum AddressType {
+BILLING
+SHIPMENT
}




class CustomerBuilder {
+name(name)
+vat(vat)
+email(email)
+birthday(birthday)
+gender(gender)
+address(address)
+createCustomer()
}

class PersistenceContext {
-Logger LOGGER
-RepositoryFactory theFactory
+repositories()
}

class RepositoryFactory{
+customers()
}

class CustomerRepository{
+findById(Long number)
+findByUsername(String name)
}


AddCustomerUI..> AddCustomerController
AddCustomerController..> Customer
AddCustomerController..> CustomerBuilder 
CustomerBuilder "1" --> "*" Customer : builds

Name "1" <-- "1" Customer : contains
Vat "1" <-- "1" Customer : contains
PhoneNumber "1" <-- "1" Customer : contains
DateOfBirthday "1" <-- "1" Customer : contains
Email "1" <-- "1" Customer : contains
Address "1..*" <-- "1" Customer : contains
AddressType "1" <-- "1" Address: contains

"AddCustomerController" "1" --> "1" "PersistenceContext" :creates


"PersistenceContext" "1" --> "1" "RepositoryFactory" :creates


"RepositoryFactory" "1" --> "1" "CustomerRepository"  :creates

"AddCustomerController" "1" --> "1..*" "Customer" :saves

"Customer" "1" --> "1" "CustomerRepository" :in

@enduml